@@ -14,6 +14,12 @@
 #  A copy of the GNU General Public License is available at
 #  http://www.r-project.org/Licenses/
 
+eval.with.vis <-
+    function (expr, envir = parent.frame(),
+              enclos = if (is.list(envir) || is.pairlist(envir))
+              parent.frame() else baseenv())
+    .Internal(eval.with.vis(expr, envir, enclos))
+
 source <-
 function(file, local = FALSE, echo = verbose, print.eval = echo,
 	 verbose = getOption("verbose"),
@@ -23,12 +29,6 @@ function(file, local = FALSE, echo = verbose, print.eval = echo,
          continue.echo = getOption("continue"),
          skip.echo = 0, keep.source = getOption("keep.source"))
 {
-    eval.with.vis <-
-	function (expr, envir = parent.frame(),
-		  enclos = if (is.list(envir) || is.pairlist(envir))
-		  parent.frame() else baseenv())
-	.Internal(eval.with.vis(expr, envir, enclos))
-
     envir <- if (local) parent.frame() else .GlobalEnv
     have_encoding <- !missing(encoding) && encoding != "unknown"
     if (!missing(echo)) {
