@@ -165,6 +165,12 @@ NEW FEATURES
     o	clip() takes extra steps to avoid the next graphics call
 	resetting the clip region.
 
+    o	New function sample.int() to provide documented access to the
+	internal part of sample() (sampling from 1:n).
+
+    o	eval.with.vis() is now a documented function rather than
+	internal to source().
+
 
 DEPRECATED & DEFUNCT
 
